feat: add photo, contact information

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8">
@@ -6,25 +7,62 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Portfolio</title>
     <link type="text/css" rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
-<body>
 
-<div class="panel">
-    <h1>Material - Expansion panels</h1>
-    <details>
-        <summary>
-           <ul>
-               <li class="titleName">Education</li>               
-               <li></li>
-           </ul>
-        </summary>
-        <div class="content">
-            <p>Lorem ipsum dolor sit amet ciores quae incidunt q rerum eum! Iste, distinctio quas..</p>
-        </div>
-    </details>
-    
+<body>
+    <header>
+        <div class="cv">
+            <div class="mainDetails">
+                <div id="headshot">
+                    <img src="/assets/img/image.jpg" alt="Yauhen Davidovich" />
+                </div>
+
+                <div id="name">
+                    <h2>Yauhen Davidovich</h2>
+                </div>
+
+                <div id="contactDetails">
+                    <ul>
+                        <li><a href="https://github.com/YauhenDavidovich" target="_blank">Github</a></li>
+
+                        <li><a href="https://www.linkedin.com/in/yauhendavidovich/" target="_blank">Linkedin</a></li>
+
+                    </ul>
+                </div>
+                <div class="clear"></div>
+            </div>
+    </header>
+
+    <div class="panel">
+        <details>
+            <summary>
+                <ul>
+                    <li class="titleName">Work Experience</li>
+                    <li></li>
+                </ul>
+            </summary>
+            <div class="content">
+                <div>
+                    <h3>CNC maschines operator</h3>
+                    <span>JAN 2013 - DEC 2013 </span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. </p>
+                </div>
+
+
+
+            </div>
+        </details>
+        <div>
+            <div class="projects">
+                <h3>Projects</h3>
+
+
+            </div>
+            
+
 </body>
+
 </html>
